Added social media icons

--- a/modules/custom/al_about_me_block/css/socicon.css
+++ b/modules/custom/al_about_me_block/css/socicon.css
@@ -10,6 +10,11 @@
   text-transform: initial;
 }
 
+aside#block-socialmedialinks li {
+   list-style-type: none; 
+}
+
 .socicon {
   font-family: 'socicon' !important;
+  font-size: 36px;
 }
