some changes to styles

--- a/modules/custom/al_about_me_block/css/socicon.css
+++ b/modules/custom/al_about_me_block/css/socicon.css
@@ -16,5 +16,6 @@ aside#block-socialmedialinks li {
 
 .socicon {
   font-family: 'socicon' !important;
-  font-size: 36px;
+  padding-right: 10px;
+/*  font-size: 36px; */
 }
