--- a/themes/hophead/css/hophead.css
+++ b/themes/hophead/css/hophead.css
@@ -1,33 +1,52 @@
 main {
   text-align: left;
-  color: #36454F;
+  color: #000;
   font-size: 1.3em;
 }
 
 div.region-header a {
-  color: #36454F;
+  color: #000;
 }
 
 div.region-content a {
   text-decoration: underline;
-  color: #36454F;
+  color: #000;
 }
 
 div.region a:hover, a:focus {
-  text-decoration: underline;
+  text-decoration: none;
   color: #ff0000;
 }
 
-div.view-frontpage article.nohover {
+div.view-id-frontpage {
+  margin-top: 0.5em;
+}
+
+div.view-frontpage article {
   background-color: white;
-  border-top: 3px solid white;
-  border-bottom: 3px solid white;
+  border: 5px solid black;
+}
+
+div.view-frontpage article p {
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+  text-align: center;
+}
+
+div.view-frontpage h2 {
+  text-align: center;
+  border-bottom: 5px solid black;
+}
+
+div.view-frontpage h2 a {
+  text-decoration: none;
+}
+
+div.view-frontpage article.nohover {
 }
 
 div.view-frontpage article.hover {
   background-color: #fffff0;
-  border-top: 3px solid #ff0000;
-  border-bottom: 3px solid #ff0000;
 }
 
 nav#block-mainnavigation ul {
