--- a/themes/hophead/css/hophead.css
+++ b/themes/hophead/css/hophead.css
@@ -31,11 +31,15 @@ div.view-frontpage article p {
   padding-left: 0.2em;
   padding-right: 0.2em;
   text-align: center;
+  font-size: 0.75em;
 }
 
 div.view-frontpage h2 {
   text-align: center;
   border-bottom: 5px solid black;
+  font-size: 1em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 div.view-frontpage h2 a {
@@ -134,4 +138,19 @@ h1.page-title.dark-text {
 
 body.path-frontpage h1.page-title {
   display: none;
+}
+
+main blockquote {
+  border: none;
+  font-size: 1.5em;
+  font-style: italic;
+  margin: 1em;
+}
+
+main blockquote p:before {
+  content: open-quote;
+}
+
+main blockquote p:after {
+  content: close-quote;
 }
