--- a/themes/hophead/css/hophead.css
+++ b/themes/hophead/css/hophead.css
@@ -45,6 +45,23 @@ div.region-header {
   font-weight: 900;
 }
 
+@media all and (max-width: 768px) {
+  .navbar-nav > li {
+    float: left;
+  }
+  ul .menu {
+    margin: 0;
+  }
+  .navbar-nav > li > a {
+    margin: 0;
+    padding: 2px;
+  }
+  div.region-header a {
+    height: 1.5em;
+    padding-bottom: 0;
+  }
+}
+
 a {
   color: #36454F;
 }
